--- a/tests/core/common/sequence_verification/BUILD.gn
+++ b/tests/core/common/sequence_verification/BUILD.gn
@@ -29,7 +29,7 @@ if (defined(ohos_lite)) {
         "-lstdc++",
         "-Wl,-rpath-link=$ohos_root_path/$root_out_dir",
       ]
-      deps = [ "$dsoftbus_root_path/core/common/security/sequence_verification:softbus_seq_verification" ]
+      deps = [ "$dsoftbus_root_path/core/common:dsoftbus_utils" ]
     }
   }
 } else {
